ghc/tests/typecheck/should_fail/tcfail063.hs
-- !!! no type variable on a context
-- !!! reported by Sigbjorn Finne

moby :: Num => Int -> a -> Int
moby x y = x+y
